--- a/packages/idae-api/config/services.yaml
+++ b/packages/idae-api/config/services.yaml
@@ -21,4 +21,4 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     App\Service\MongoAccessGuard:
-        arguments: [ '@request_stack' ]
+        arguments: [ '@request_stack', '@MongoDB\Client' ]
