--- a/packages/idae-api/config/services.yaml
+++ b/packages/idae-api/config/services.yaml
@@ -20,5 +20,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    MongoDB\Client:
+        class: MongoDB\Client
+        arguments:
+            $uri: '%env(MONGODB_URL)%'
+
     App\Service\MongoAccessGuard:
         arguments: [ '@request_stack', '@MongoDB\Client' ]
